--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,7 @@
-name: "Deploy to Heroku"
-description: "Deploy an app to Heroku"
+name: "Heroku Pipeline Promote"
+description: "Promote an app in a pipeline"
 branding:
-  icon: "upload-cloud"
+  icon: "arrow-right"
   color: "purple"
 inputs:
   heroku_api_key:
@@ -11,26 +11,8 @@ inputs:
     description: "Email that you use with heroku"
     required: true
   heroku_app_name:
-    description: "The appname to use for deploying/updating"
+    description: "The appname being promoted"
     required: true
-  buildpack:
-    description: "An optional buildpack to use when creating the heroku application"
-  branch:
-    description: "The branch that you would like to deploy to Heroku"
-    default: "HEAD"
-  dontuseforce:
-    description: "Set this to true if you don't want to use --force when switching branches"
-    default: false
-  usedocker:
-    description: "Will deploy using Dockerfile in project root."
-    default: false
-  docker_heroku_process_type:
-    description: "Type of heroku process (web, worker, etc). This option only makes sense when usedocker enabled"
-    default: "web"
-    required: false
-  appdir:
-    description: "Set if your app is located in a subdirectory."
-    default: ""
 outputs:
   status:
     description: "The Success/Failure of the action"
